@@ -477,21 +477,23 @@ file_itemizer::visit_file(file_path const & path)
 struct workspace_itemizer : public tree_walker
 {
   roster_t & roster;
+  path_set & known;
   node_id_source & nis;
 
-  workspace_itemizer(roster_t & r, node_id_source & n)
-    : roster(r), nis(n) {}
-  virtual void visit_dir(file_path const & path);
+  workspace_itemizer(roster_t & r, path_set & k, node_id_source & n)
+    : roster(r), known(k), nis(n) {}
+  virtual bool visit_dir(file_path const & path);
   virtual void visit_file(file_path const & path);
 };
 
-void
+bool
 workspace_itemizer::visit_dir(file_path const & path)
 {
   split_path sp;
   path.split(sp);
   node_id nid = roster.create_dir_node(nis);
   roster.attach_node(nid, sp);
+  return known.find(sp) != known.end();
 }
 
 void
@@ -1570,12 +1572,17 @@ workspace::perform_content_update(cset const & update,
   roster_t roster;
   temp_node_id_source nis;
   split_path root;
-  file_path().split(root);
+  path_set known;
+  roster_t new_roster;
 
+  file_path().split(root);
   node_id nid = roster.create_dir_node(nis);
   roster.attach_node(nid, root);
 
-  workspace_itemizer itemizer(roster, nis);
+  get_current_roster_shape(new_roster, nis);
+  new_roster.extract_path_set(known);
+
+  workspace_itemizer itemizer(roster, known, nis);
   walk_tree(file_path(), itemizer);
 
   simulated_working_tree swt(roster, nis);
